Added product cards to Merch section with images, descriptions and links to band store

--- a/index.html
+++ b/index.html
@@ -289,6 +289,75 @@
     <section class="container-wrapper--merch" id="merch">
         <div class="container-fluid merch-content-container">
             <h2 class="justify-content-center merch-heading"><i class="fa fa-shopping-basket" aria-hidden="true"></i> Merch</h2>
+            <div class="row card-row-1">
+                <div class="col-sm card-col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="assets/images/Merch Cards/CRNB_19_in-the-end-tshirt-white_large.png" class="card-img-top" alt="In The End White T-shirt">
+                        <div class="card-body">
+                            <h5 class="card-title">'In The End Album' White T-shirt</h5>
+                            <p class="card-text">£20.00</p>
+                            <a href="https://thecranberries.shopfirebrand.com/products/in-the-end-album-white-t-shirt" class="buy-btn btn btn-dark btn-lg card-btn" target="_blank">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm card-col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="assets/images/Merch Cards/CRNB_19_in-the-end-tshirt_large.png" class="card-img-top" alt="In The End Black T-shirt">
+                        <div class="card-body">
+                            <h5 class="card-title">'In The End Album' Black T-shirt</h5>
+                            <p class="card-text">£20.00</p>
+                            <a href="https://thecranberries.shopfirebrand.com/products/in-the-end-album-black-t-shirt" class="buy-btn btn btn-dark btn-lg card-btn" target="_blank">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm card-col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="assets/images/Merch Cards/CRNB_19_Album-mug_large.png" class="card-img-top" alt="In The End Black Mug">
+                        <div class="card-body">
+                            <h5 class="card-title">'In The End Album' Black Mug</h5>
+                            <p class="card-text">£8.00</p>
+                            <a href="https://thecranberries.shopfirebrand.com/products/in-the-end-album-black-mug" class="buy-btn btn btn-dark btn-lg card-btn" target="_blank">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row card-row-2 d-none d-lg-flex">
+                <div class="col-sm card-col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="assets/images/Merch Cards/CRNB_19_Silhouette-tote-bag_large.png" class="card-img-top" alt="Silhouette Tote Bag">
+                        <div class="card-body">
+                            <h5 class="card-title">'Album Silhouette' Black Tote Bag</h5>
+                            <p class="card-text">£10.00</p>
+                            <a href="https://thecranberries.shopfirebrand.com/products/album-silhouette-black-tote-bag" class="buy-btn btn btn-dark btn-lg card-btn" target="_blank">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm card-col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="assets/images/Merch Cards/CRNB_19_Pullover-hoodie-red_large.png" class="card-img-top" alt="Red Pullover Hoodie">
+                        <div class="card-body">
+                            <h5 class="card-title">'Album Silhouette' Red Hoodie</h5>
+                            <p class="card-text">£40.00</p>
+                            <a href="https://thecranberries.shopfirebrand.com/products/album-silhouette-white-hoodie" class="buy-btn btn btn-dark btn-lg card-btn" target="_blank">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm card-col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="assets/images/Merch Cards/CRNB_19_Pullover-hoodie_large.png" class="card-img-top" alt="Black Pullover Hoodie">
+                        <div class="card-body">
+                            <h5 class="card-title">'Album Silhouette' Black Hoodie</h5>
+                            <p class="card-text">£40.00</p>
+                            <a href="https://thecranberries.shopfirebrand.com/products/album-silhouette-black-hoody" class="buy-btn btn btn-dark btn-lg card-btn" target="_blank">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <a href="https://thecranberries.shopfirebrand.com/" class="buy-btn btn btn-dark btn-lg visit-btn" target="_blank">Visit the shop</a>
+                </div>
+            </div>
         </div>
     </section>
 
