--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselHeader" role="button" data-slide="prev">
+                    <a class="carousel-control-prev carousel-control-icons" href="#carouselHeader" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselHeader" role="button" data-slide="next">
+                    <a class="carousel-control-next carousel-control-icons" href="#carouselHeader" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
