Added .gitignore; Edited README.md; Fixed font size issue on tour table

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <header>
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top flex-row" id="nav">
-            <a class="navbar-brand d-none d-sm-block" href="#Landing">
+            <a class="navbar-brand d-none d-sm-block" href="#landing">
                 <img src="assets/images/logo.png" alt="Logo" class="responsive-img logo img-fluid">
             </a>
-            <a class="navbar-brand d-sm-none" href="#Landing">
+            <a class="navbar-brand d-sm-none" href="#landing">
                 <img src="assets/images/logo-sm.png" alt="Logo" class="responsive-img logo img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,7 +59,7 @@
     <main>
         <!-- Landing -->
         <section class="container-wrapper--landing">
-            <h2><span id="Landing"></span></h2>
+            <h2><span id="landing"></span></h2>
             <!--Bootstrap Carousel-->
             <div class="container-fluid landing-content-container">
                 <div class="no-padding">
