Added heading for social links section

--- a/index.html
+++ b/index.html
@@ -532,6 +532,7 @@
             <div class="row">
                 <!--Social Links-->
                 <div class="col-sm order-lg-12 footer-col-1">
+                    <h3 class="uppercase footer-heading"><i class="fas fa-share-alt" aria-hidden="true"></i> Social Links</h3>
                     <ul class="list-inline social-links">
                         <li class="list-inline-item">
                             <a href="https://www.facebook.com/TheCranberries/" target="_blank">
@@ -564,7 +565,7 @@
                     <h3 class="uppercase footer-heading"><i class="fa fa-envelope" aria-hidden="true"></i> Sign up for news about the band</h3>
                     <div class="row justify-content-center mb-4 col-sm">
                         <form class="form-inline">
-                            <div class="form-group mx-sm-3">
+                            <div class="form-group newsletter-signup">
                                 <input type="email" class="form-control form-control-lg" id="signupemail" placeholder="Email" size="55" required>
                             </div>
                             <input type="submit" value="Submit" class="btn btn-dark btn-lg signup-btn">
