Fixed newsletter signup form responsiveness issues

--- a/index.html
+++ b/index.html
@@ -565,8 +565,8 @@
                     <h3 class="uppercase footer-heading"><i class="fa fa-envelope" aria-hidden="true"></i> Sign up for news about the band</h3>
                     <div class="row justify-content-center mb-4 col-sm">
                         <form class="form-inline">
-                            <div class="form-group newsletter-signup">
-                                <input type="email" class="form-control form-control-lg" id="signupemail" placeholder="Email" size="55" required>
+                            <div class="form-group email-box">
+                                <input type="email" class="form-control form-control-lg newsletter-signup" id="signupemail" placeholder="Email" size="55" required>
                             </div>
                             <input type="submit" value="Submit" class="btn btn-dark btn-lg signup-btn">
                         </form>
